# HMIS2026

./: .env.example  .gitignore  =3.1.0  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  CQRS_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DLQ_IMPLEMENTATION_SUMMARY.md  DOCKER_SETUP.md  FHIR_ENCOUNTER_IMPLEMENTATION_COMPLETE.md  FHIR_OBSERVATION_FINAL_STATUS.md  FHIR_OBSERVATION_IMPLEMENTATION_STATUS.md  FHIR_OBSERVATION_PROGRESS.md  FHIR_PHASE_A1_FINAL_STATUS.md  FHIR_R4_IMPLEMENTATION_COMPLETE.md  FIX_10_BACKEND_COMPLETE.md  FIX_10_PARSEINT_STATUS.md  FIX_11_VALIDATION_SUMMARY.md  FORM_VALIDATION_IMPROVEMENTS_REPORT.md  FRONTEND_BACKEND_ANALYSIS.md  FRONTEND_PERFORMANCE.md  HMIS_COMPLETENESS_SUMMARY.md  HMIS_IMPLEMENTATION_ROADMAP.md  HMIS_INDUSTRY_GAP_ANALYSIS.md  INTEGRATION_TESTS_SUMMARY.md  KUBERNETES_DEPLOYMENT.md  MIGRATION_FIXES_SUMMARY.md  OPENTELEMETRY_IMPLEMENTATION_SUMMARY.md  PAGE_FRAGMENTATION_SUMMARY.md  PATIENT_PORTAL.md  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  README.md  REPORTS_IMPLEMENTATION.md  SCRIPTS_README.md  (+13 more)
hmis-backend/: .dockerignore  .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
hmis-backend/alembic/versions/: add_encounter_attachments.py  add_reports_tables.py  add_stripe_models.py
hmis-backend/app/: __init__.py  main.py
hmis-backend/app/core/: cache.py  config.py  database.py  logging.py  metrics.py  middleware.py  rate_limit.py  secrets.py  security.py  tracing.py
hmis-backend/app/cqrs/: __init__.py  commands.py  projections.py  queries.py
hmis-backend/app/shared/: base_models.py  events.py  exceptions.py  repository.py  schemas.py  utils.py
hmis-backend/docker/: Dockerfile  init-db.sql
hmis-backend/migrations/: env.py
hmis-backend/scripts/: seed_data.py
hmis-backend/tests/: conftest.py  manual_fhir_verification.py
(+465 files in other folders)
